simple time domain plot of signal(needs axes zoom improvements)

--- a/eeri325-prac/mainwindow.ui
+++ b/eeri325-prac/mainwindow.ui
@@ -103,6 +103,13 @@
                 </property>
                </widget>
               </item>
+              <item>
+               <widget class="QPushButton" name="orgBtnPlot">
+                <property name="text">
+                 <string>Plot</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </widget>
            </item>
