--- a/eeri325-prac/mainwindow.ui
+++ b/eeri325-prac/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabSound">
        <attribute name="title">
@@ -183,8 +183,13 @@
                  <bool>false</bool>
                 </property>
                 <property name="currentText">
-                 <string/>
+                 <string>4kLPF</string>
                 </property>
+                <item>
+                 <property name="text">
+                  <string>4kLPF</string>
+                 </property>
+                </item>
                </widget>
               </item>
               <item>
@@ -194,7 +199,7 @@
             </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QCustomPlot" name="widgetTime_2" native="true">
+            <widget class="QCustomPlot" name="FilSound" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -204,7 +209,7 @@
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QCustomPlot" name="widgetFreq_2" native="true">
+            <widget class="QCustomPlot" name="FreqFilSound" native="true">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
                <horstretch>0</horstretch>
@@ -222,6 +227,35 @@
        <attribute name="title">
         <string>Image</string>
        </attribute>
+       <widget class="QWidget" name="widget" native="true">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>1281</width>
+          <height>61</height>
+         </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+       <widget class="QLabel" name="picOriginal">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>90</y>
+          <width>501</width>
+          <height>331</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
